--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -664,7 +664,7 @@ button:hover {
     }
 
     h1 {
-        font-size: 3.8rem !important;
+        font-size: 3.2rem !important;
     }
 
     h2 {
@@ -672,19 +672,19 @@ button:hover {
     }
 
     h3 {
-        font-size: 2.8rem !important;
+        font-size: 2rem !important;
     }
 
     h4 {
-        font-size: 2.5rem !important;
+        font-size: 1.8rem !important;
     }
 
     h5 {
-        font-size: 2.2rem !important;
+        font-size: 1.7rem !important;
     }
 
     h6 {
-        font-size: 1.7rem !important;
+        font-size: 1.5rem !important;
     }
 
     table {
